all pages content are changed

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,10 @@ body {
   height: auto;
 }
 
+.mil-blog p, li {
+  text-align: justify;
+}
+
 /* -------------------------------------------
 
 typography
