--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,122 @@ body {
   text-align: justify;
 }
 
+
+.mil-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.mil-modal.show {
+  display: flex !important;
+  opacity: 1;
+}
+
+
+.mil-modal-content {
+  background: white;
+  padding: 30px; 
+  border-radius: 10px;
+  width: 500px; 
+  text-align: left;
+  position: relative;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+}
+
+
+.mil-close {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  font-size: 26px;
+  cursor: pointer;
+  color: rgb(245, 124, 0);
+  transition: 0.3s;
+}
+
+.mil-close:hover {
+  color: rgb(228, 114, 0);
+}
+
+
+.mil-modal-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: rgb(245, 124, 0);
+  text-align: center;
+}
+
+.mil-modal-subtitle {
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 15px;
+  color: #444;
+}
+
+
+.mil-modal-list {
+  list-style-type: disc;
+  padding-left: 20px;
+  margin: 5px 0 15px;
+  color: #666;
+  font-size: 14px;
+}
+
+
+.mil-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.mil-form input {
+  width: 100%;
+  padding: 12px; 
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+
+.mil-form input[type="file"] {
+  padding: 5px;
+  border: none;
+}
+
+
+.mil-form button {
+  background: rgb(245, 124, 0);
+  color: white;
+  padding: 14px; 
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: 0.3s;
+}
+
+.mil-form button:hover {
+  background: rgb(255, 160, 66);
+}
+
+
+
+
+
+
 /* -------------------------------------------
 
 typography
