--- a/css/style.css
+++ b/css/style.css
@@ -1752,20 +1752,24 @@ top panel
           align-items: center;
 }
 .mil-top-panel .mil-logo {
-  height: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url(../img/logo/navi-logo-dark.png);
+  /* background-image: url(../img/logo/navi-logo-dark.png); */
   background-position: center;
   background-repeat: no-repeat;
-
   background-size: contain;
-
 }
+
+/* .mil-top-panel .mil-logo img {
+  width: 640px;  
+  height: 70px;  
+  object-fit: contain;  
+} */
+
 .mil-top-panel .mil-navigation nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1969,9 +1973,9 @@ top panel
   -webkit-box-shadow: none;
           box-shadow: none;
 }
-.mil-top-panel.mil-top-panel-transparent .mil-logo {
+/* .mil-top-panel.mil-top-panel-transparent .mil-logo {
   background-image: url(../img/logo/navi-logo-light.png);
-}
+} */
 .mil-top-panel.mil-top-panel-transparent .mil-navigation nav ul li a {
   color: rgb(255, 255, 255);
 }
