--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -51,15 +51,15 @@ top panel
         align-items: center;
     }
 
-    & .mil-logo {
-        height: 30px;
-        display: flex;
-        align-items: center;
-        background-image: url(../img/logo/logo-dark.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-    }
+    // & .mil-logo {
+    //     height: 30px;
+    //     display: flex;
+    //     align-items: center;
+    //     background-image: url(../img/logo/logo-dark.png);
+    //     background-position: center;
+    //     background-repeat: no-repeat;
+    //     background-size: contain;
+    // }
 
     & .mil-navigation {
         & nav {
@@ -286,9 +286,9 @@ top panel
         background-color: transparent;
         box-shadow: none;
 
-        & .mil-logo {
-            background-image: url(../img/logo/logo-light.png);
-        }
+        // & .mil-logo {
+        //     background-image: url(../img/logo/logo-light.png);
+        // }
 
         & .mil-navigation {
             & nav {
@@ -339,9 +339,9 @@ top panel
             background-color: $light;
 
 
-            & .mil-logo {
-                background-image: url(../img/logo/logo-dark.png);
-            }
+            // & .mil-logo {
+            //     background-image: url(../img/logo/logo-dark.png);
+            // }
 
             & .mil-navigation {
                 & nav {
@@ -3467,9 +3467,9 @@ footer
 .mil-footer-content {
     position: relative;
 
-    & .mil-logo {
-        width: 120px;
-    }
+    // & .mil-logo {
+    //     width: 820px;
+    // }
 
     & .mil-list-title {
         display: flex;
