--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -3597,6 +3597,7 @@ footer
         height: 100%;
         display: flex;
         align-items: center;
+        text-align: center;
         justify-content: space-between;
 
         & p {
