--- a/css/style.css
+++ b/css/style.css
@@ -2857,7 +2857,8 @@ partners
   }
 }
 .mil-partners-frame a {
-  width: 150px;
+  width: 250px;
+  height: 250px;
   position: relative;
   cursor: pointer;
   display: -webkit-box;
@@ -2886,6 +2887,8 @@ partners
      object-fit: contain;
   display: block;
   width: 100%;
+  height: 100%;
+  margin: 100px;
   cursor: pointer;
 }
 @media screen and (max-width: 1200px) {
@@ -2931,6 +2934,8 @@ partners
     padding-bottom: 30px;
   }
 }
+
+
 
 /* -------------------------------------------
 
